--- a/chores-app/src/chorelist.css
+++ b/chores-app/src/chorelist.css
@@ -14,6 +14,7 @@
     background-color: #F0F0FE;
     position: relative;
     flex: 1;
+    height: 100vh;
   }
   
   .home-page .profileicon {
@@ -46,7 +47,6 @@
     font-weight: 400;
     line-height: normal;
     white-space: nowrap;
-    position: relative;
   }
   
   .home-page .welcomeMessage {
@@ -120,30 +120,6 @@
     width: 328px;
   }
   
-  .home-page .text-wrapper-8 {
-    color: #080d7e;
-    font-family: "Lato-SemiBold", Helvetica;
-    font-size: 24px;
-    font-weight: 600;
-    left: 17px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 17px;
-  }
-  
-  .home-page .text-wrapper-9 {
-    color: #919191;
-    font-family: "Lato-Regular", Helvetica;
-    font-size: 14px;
-    font-weight: 400;
-    left: 17px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 46px;
-  }
-  
   .home-page .text-wrapper-10 {
     color: #080d7e;
     font-family: "Lato-Medium", Helvetica;
@@ -182,143 +158,7 @@
     top: 253px;
     white-space: nowrap;
   }
-  
-  .home-page .overlap-2 {
-    background-color: #fffcfc;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 82px;
-    left: 1024px;
-    position: absolute;
-    top: 285px;
-    width: 328px;
-  }
-  
-  .home-page .overlap-3 {
-    background-color: #fffcfc;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 82px;
-    left: 649px;
-    position: absolute;
-    top: 291px;
-    width: 328px;
-  }
-  
-  .home-page .overlap-4 {
-    background-color: #fffcfc;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 87px;
-    left: 277px;
-    position: absolute;
-    top: 495px;
-    width: 1073px;
-  }
-  
-  .home-page .rectangle-3 {
-    background-color: #d9d9d9;
-    border: 1px solid;
-    border-color: #000000;
-    border-radius: 10px;
-    height: 57px;
-    left: 12px;
-    position: absolute;
-    top: 15px;
-    width: 58px;
-  }
-  
-  .home-page .rectangle-4 {
-    border: 1px solid;
-    border-color: #000000;
-    border-radius: 10px;
-    height: 38px;
-    left: 1023px;
-    position: absolute;
-    top: 24px;
-    width: 36px;
-  }
-  
-  .home-page .overlap-5 {
-    border: 1px solid;
-    border-color: #000000;
-    border-radius: 10px;
-    height: 38px;
-    left: 928px;
-    position: absolute;
-    top: 22px;
-    width: 36px;
-  }
-  
-  .home-page .text-wrapper-12 {
-    color: #919191;
-    font-family: "Lato-Regular", Helvetica;
-    font-size: 14px;
-    font-weight: 400;
-    left: 82px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 48px;
-  }
-  
-  .home-page .text-wrapper-13 {
-    color: #080d7e;
-    font-family: "Lato-SemiBold", Helvetica;
-    font-size: 24px;
-    font-weight: 600;
-    left: 82px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 19px;
-  }
-  
-  .home-page .overlap-6 {
-    background-color: #fffcfc;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 87px;
-    left: 274px;
-    position: absolute;
-    top: 608px;
-    width: 1073px;
-  }
-  
-  .home-page .text-wrapper-14 {
-    color: #919191;
-    font-family: "Lato-Regular", Helvetica;
-    font-size: 14px;
-    font-weight: 400;
-    left: 89px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 48px;
-  }
-  
-  .home-page .overlap-7 {
-    background-color: #fffcfc;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 87px;
-    left: 274px;
-    position: absolute;
-    top: 720px;
-    width: 1073px;
-  }
-  
-  .home-page .overlap-group-2 {
-    background-color: #fffcfc;
-    border-radius: 10px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 87px;
-    left: 274px;
-    position: absolute;
-    top: 833px;
-    width: 1073px;
-  }
-  
+
   .home-page .text-wrapper-15 {
     color: #000000;
     font-family: "Lato-Regular", Helvetica;
@@ -353,24 +193,6 @@
     position: absolute;
     top: 60px;
     width: 196px;
-  }
-  
-  .home-page .overlap-8 {
-    height: 43px;
-    left: 13px;
-    position: absolute;
-    top: 200px;
-    width: 195px;
-  }
-  
-  .home-page .rectangle-5 {
-    background-color: #06096017;
-    border-radius: 10px;
-    height: 43px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 188px;
   }
   
   .home-page .text-wrapper-16 {
