--- a/chores-app/src/chorelist.css
+++ b/chores-app/src/chorelist.css
@@ -1,4 +1,9 @@
-
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: baseline;
+}
 
 
 .home-page {
