--- a/chores-app/src/choreTask.css
+++ b/chores-app/src/choreTask.css
@@ -1,24 +1,41 @@
-/* Add this to your CSS file or style section */
 .rectangle {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 16px;
-    margin: 8px;
-    background-color: #f5f5f5;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: relative;
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .rectangle h3 {
-    color: #333;
-    margin-right: 10px;
-  }
-  
-  .rectangle p {
-    color: #666; 
-    margin-right: 10px; /* Add some space between the elements */
-  }
-  
-  /* Additional styles as needed */
+  height: 100px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  margin: 8px;
+  background-color: #f5f5f5;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 80%;
+  position: absolute; /* Set to absolute position */
+}
+
+.status {
+  display: flex;
+  align-items: center;
+}
+
+.status button {
+  margin-left: 5px;
+}
+
+.rectangle h3 {
+  color: #333;
+  margin-right: 10px;
+}
+
+.rectangle p {
+  color: #666;
+  margin-right: 10px;
+}
+
+.red-button {
+  background-color: red;
+}
+
+.green-button {
+  background-color: green;
+}
