--- a/chores-app/src/recap.css
+++ b/chores-app/src/recap.css
@@ -1,3 +1,10 @@
+.logo {
+  height: 31px;
+  left: 251px;
+  position: absolute;
+  width: 196px;
+}
+
 .chores-recap {
     background-color: #f0f0fe;
     display: flex;
@@ -44,20 +51,11 @@
     font-family: "Lato-Bold", Helvetica;
     font-size: 40px;
     font-weight: 700;
-    left: 560px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     top: 50px;
     white-space: nowrap;
-  }
-  
-  .chores-recap .logo {
-    height: 31px;
-    left: 17px;
-    position: absolute;
-    top: 60px;
-    width: 196px;
   }
   
   .chores-recap .overlap {
@@ -143,26 +141,12 @@
     width: 183px;
   }
   
-  .chores-recap .text-wrapper-6 {
-    color: #2f2e2e;
-    font-family: "Lato-Medium", Helvetica;
-    font-size: 15px;
-    font-weight: 500;
-    left: 24px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 960px;
-    width: 183px;
-  }
-  
-  .chores-recap .p {
+  .chores-recap .week {
     color: #797878;
     font-family: "Lato-Italic", Helvetica;
     font-size: 16px;
     font-style: italic;
     font-weight: 400;
-    left: 277px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -176,7 +160,6 @@
     font-size: 14px;
     font-style: italic;
     font-weight: 400;
-    left: 305px;
     letter-spacing: 0;
     line-height: 17px;
     position: absolute;
@@ -185,68 +168,71 @@
     white-space: nowrap;
   }
   
-  .chores-recap .text-wrapper-7 {
+  .chores-recap .fastest-cleaner {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 20px;
     font-weight: 700;
-    left: 871px;
+    left: 550px;
     letter-spacing: 0;
     line-height: 24.2px;
     position: absolute;
     text-align: center;
-    top: 254px;
+    top: 250px;
     width: 177px;
+    white-space: nowrap;
   }
   
-  .chores-recap .text-wrapper-8 {
+  .chores-recap .last-minute {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 20px;
     font-weight: 700;
-    left: 1087px;
+    left: 760px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     text-align: center;
-    top: 254px;
+    top: 250px;
     width: 264px;
+    white-space: nowrap;
   }
   
-  .chores-recap .text-wrapper-9 {
+  .chores-recap .dirtiest {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 20px;
     font-weight: 700;
-    left: 863px;
+    left: 540px;
     letter-spacing: 0;
-    line-height: 24.2px;
+    line-height: normal;
     position: absolute;
     text-align: center;
     top: 517px;
     white-space: nowrap;
   }
   
-  .chores-recap .text-wrapper-10 {
+  .chores-recap .verifier {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 20px;
     font-weight: 700;
-    left: 1095px;
+    left: 770px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     text-align: center;
     top: 517px;
     width: 247px;
+    white-space: wrap;
   }
   
-  .chores-recap .overlap-group {
+  .chores-recap .bonnie {
     background-color: #fffcfc;
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 191px;
-    left: 1123px;
+    left: 550px;
     position: absolute;
     top: 292px;
     width: 191px;
@@ -275,12 +261,12 @@
     width: 127px;
   }
   
-  .chores-recap .overlap-group-2 {
+  .chores-recap .sophia {
     background-color: #fffcfc;
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 191px;
-    left: 864px;
+    left: 800px;
     position: absolute;
     top: 292px;
     width: 191px;
@@ -291,13 +277,13 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 156px;
-    left: 277px;
+    left: 0px;
     position: absolute;
     top: 245px;
     width: 152px;
   }
   
-  .chores-recap .text-wrapper-12 {
+  .chores-recap .chores-assigned-text {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 15px;
@@ -311,7 +297,7 @@
     white-space: nowrap;
   }
   
-  .chores-recap .text-wrapper-13 {
+  .chores-recap .no-chores {
     color: #0d14bb;
     font-family: "Lato-Black", Helvetica;
     font-size: 64px;
@@ -329,7 +315,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 95px;
-    left: 277px;
+    left: 0px;
     position: absolute;
     top: 540px;
     width: 95px;
@@ -340,7 +326,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 95px;
-    left: 277px;
+    left: 0px;
     position: absolute;
     top: 645px;
     width: 95px;
@@ -351,7 +337,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 95px;
-    left: 277px;
+    left: 0px;
     position: absolute;
     top: 750px;
     width: 95px;
@@ -362,7 +348,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 95px;
-    left: 277px;
+    left: 0px;
     position: absolute;
     top: 857px;
     width: 95px;
@@ -373,7 +359,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 156px;
-    left: 455px;
+    left: 175px;
     position: absolute;
     top: 245px;
     width: 152px;
@@ -411,7 +397,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 156px;
-    left: 633px;
+    left: 350px;
     position: absolute;
     top: 245px;
     width: 152px;
@@ -436,7 +422,7 @@
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 16px;
     font-weight: 600;
-    left: 387px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -449,7 +435,7 @@
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 13px;
     font-weight: 600;
-    left: 387px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -462,7 +448,7 @@
     font-family: "Lato-Bold", Helvetica;
     font-size: 20px;
     font-weight: 700;
-    left: 385px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -475,7 +461,7 @@
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 16px;
     font-weight: 600;
-    left: 387px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -488,7 +474,7 @@
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 13px;
     font-weight: 600;
-    left: 387px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -501,7 +487,7 @@
     font-family: "Lato-Bold", Helvetica;
     font-size: 20px;
     font-weight: 700;
-    left: 385px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -514,7 +500,7 @@
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 16px;
     font-weight: 600;
-    left: 387px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -527,7 +513,7 @@
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 13px;
     font-weight: 600;
-    left: 387px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -540,7 +526,7 @@
     font-family: "Lato-Bold", Helvetica;
     font-size: 20px;
     font-weight: 700;
-    left: 385px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -553,24 +539,24 @@
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 16px;
     font-weight: 600;
-    left: 387px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     top: 885px;
     white-space: nowrap;
   }
-  
+
   .chores-recap .for-the-housemate {
     color: #000000;
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 13px;
-    font-weight: 400;
-    left: 387px;
+    font-weight: 600;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
-    top: 912px;
+    top: 900px;
     width: 365px;
   }
   
@@ -578,27 +564,12 @@
     font-weight: 600;
   }
   
-  .chores-recap .text-wrapper-27 {
-    font-family: "Lato-BoldItalic", Helvetica;
-    font-style: italic;
-    font-weight: 700;
-  }
-  
-  .chores-recap .text-wrapper-28 {
-    font-family: "Lato-Regular", Helvetica;
-  }
-  
-  .chores-recap .text-wrapper-29 {
-    font-family: "Lato-Medium", Helvetica;
-    font-weight: 500;
-  }
-  
   .chores-recap .text-wrapper-30 {
     color: #080d7f;
     font-family: "Lato-Bold", Helvetica;
     font-size: 20px;
     font-weight: 700;
-    left: 385px;
+    left: 120px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -606,34 +577,34 @@
     width: 345px;
   }
   
-  .chores-recap .overlap-5 {
+  .chores-recap .sherry {
     background-color: #fffcfc;
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 191px;
-    left: 871px;
+    left: 550px;
     position: absolute;
-    top: 559px;
+    top: 580px;
     width: 191px;
   }
   
-  .chores-recap .overlap-6 {
+  .chores-recap .grace {
     background-color: #fffcfc;
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
     height: 191px;
-    left: 1123px;
+    left: 800px;
     position: absolute;
-    top: 559px;
+    top: 580px;
     width: 191px;
   }
   
-  .chores-recap .text-wrapper-31 {
+  .chores-recap .housemate-roles {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 24px;
     font-weight: 700;
-    left: 967px;
+    left: 650px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -641,12 +612,12 @@
     top: 201px;
   }
   
-  .chores-recap .text-wrapper-32 {
+  .chores-recap .housemate-archetype {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 24px;
     font-weight: 700;
-    left: 373px;
+    left: 70px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -654,12 +625,12 @@
     top: 477px;
   }
   
-  .chores-recap .text-wrapper-33 {
+  .chores-recap .chore-summary {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 24px;
     font-weight: 700;
-    left: 405px;
+    left: 0px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -667,36 +638,23 @@
     top: 201px;
   }
   
-  .chores-recap .text-wrapper-34 {
-    color: #080d7e;
-    font-family: "Lato-Bold", Helvetica;
-    font-size: 40px;
-    font-weight: 700;
-    left: 271px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 50px;
-    white-space: nowrap;
-  }
-  
-  .chores-recap .overlap-7 {
+  .chores-recap .summary {
     background-color: #dfe0fa;
     border-radius: 10px;
     box-shadow: 0px 4px 4px #00000040;
-    height: 99px;
-    left: 867px;
+    height: 125px;
+    left: 550px;
     position: absolute;
-    top: 836px;
+    top: 850px;
     width: 440px;
   }
   
-  .chores-recap .text-wrapper-35 {
+  .chores-recap .week-streak {
     color: #0d14bb;
     font-family: "Lato-Black", Helvetica;
     font-size: 48px;
     font-weight: 900;
-    left: 140px;
+    left: 110px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -709,7 +667,7 @@
     font-family: "Lato-Bold", Helvetica;
     font-size: 15px;
     font-weight: 700;
-    left: 87px;
+    left: 70px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -718,30 +676,31 @@
     white-space: nowrap;
   }
   
-  .chores-recap .text-wrapper-37 {
+  .chores-recap .chore-streak {
     color: #080d7e;
     font-family: "Lato-Bold", Helvetica;
     font-size: 24px;
     font-weight: 700;
-    left: 983px;
+    left: 650px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     text-align: center;
-    top: 786px;
+    top: 800px;
   }
   
-  .chores-recap .text-wrapper-38 {
+  .chores-recap .longest-streak {
     color: #080d7e;
     font-family: "Lato-SemiBold", Helvetica;
     font-size: 13px;
     font-weight: 600;
-    left: 1018px;
+    left: 690px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     text-align: center;
-    top: 944px;
+    top: 990px;
+    white-space: nowrap;
   }
   
   .chores-recap .view-previous-weekly {
@@ -749,7 +708,6 @@
     font-family: "Lato-Regular", Helvetica;
     font-size: 15px;
     font-weight: 400;
-    left: 277px;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -759,19 +717,19 @@
     white-space: nowrap;
   }
   
-  .chores-recap .ellipse-2 {
+  .chores-recap .profile-pic {
     background-color: #d9d9d9;
     border-radius: 20.5px;
     height: 41px;
-    left: 1188px;
+    left: 750px;
     position: absolute;
     top: 55px;
     width: 41px;
   }
   
-  .chores-recap .overlap-8 {
+  .chores-recap .profile {
     height: 28px;
-    left: 1240px;
+    left: 800px;
     position: absolute;
     top: 61px;
     width: 110px;
